Refactored mapper to use modern mapreduce interface.